
noinst_HEADERS = \
    fmt/chrono.h \
    fmt/color.h \
    fmt/compile.h \
    fmt/core.h \
    fmt/format-inl.h \
    fmt/format.h \
    fmt/locale.h \
    fmt/os.h \
    fmt/ostream.h \
    fmt/posix.h \
    fmt/printf.h \
    fmt/ranges.h \
    fmt/time.h

noinst_LIBRARIES = libcppfmt.a

libcppfmt_a_SOURCES = \
    format.cc \
    os.cc
