
AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libyajl.a

noinst_HEADERS = \
    api/yajl_common.h \
	api/yajl_gen.h \
	api/yajl_parse.h \
	api/yajl_tree.h \
	yajl_alloc.h \
	yajl_buf.h \
	yajl_bytestack.h \
	yajl_common.h \
	yajl_encode.h \
	yajl_lex.h \
	yajl_parser.h \
	yajl_version.h

libyajl_a_SOURCES = \
    yajl.c \
	yajl_alloc.c \
	yajl_alloc.h \
	yajl_buf.c \
	yajl_buf.h \
	yajl_bytestack.h \
	yajl_encode.c \
	yajl_encode.h \
	yajl_gen.c \
	yajl_lex.c \
	yajl_lex.h \
	yajl_parser.c \
	yajl_parser.h \
	yajl_tree.c \
	yajl_version.c
